--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mesa-syntax",
+  "name": "danger-zone-syntax",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "A dark atom syntax theme with a focus on visual grepping and sexiness.",
@@ -11,9 +11,10 @@
     "vivid",
     "grepping",
     "sexy",
-    "mesa"
+    "danger",
+    "zone"
   ],
-  "repository": "https://github.com/aebarber/mesa-syntax",
+  "repository": "https://github.com/aebarber/danger-zone-syntax",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
